# tube-manager

./: CICD.md  DEPLOY_TRIGGER  README.md  REAL_DATA_VERIFICATION.md  SECURITY_AUDIT_REPORT.md  STUB_DATA_AUDIT.md  STUB_FIXES_SUMMARY.md  app.py  app_minimal.py  app_old.py  fix_stubs.py  pyproject.toml  render.yaml  requirements.txt  run_tests.py  security_fixes.py  test_report.py
core/: __init__.py  config_manager.py  logger.py
docs/: cli.md  runbook.md
models/: __init__.py  config.py  task.py
scripts/: bootstrap_ui.sh
services/: __init__.py  youtube_service.py  youtube_service_old.py
tests/: __init__.py  test_schema.py  test_task_factory.py
tube-manager/: app.py  render.yaml  requirements-test.txt  requirements.txt
tube-manager/api/: bulk_operations.py
tube-manager/services/: youtube_client.py
tube-manager/tests/: README.md  conftest.py  test_helpers.py
tube-manager/tests/integration/: test_api_endpoints.py
tube-manager/tests/load/: test_performance.py
tube-manager/tests/security/: test_security.py
tube-manager/tests/unit/: test_youtube_service.py
tube-manager/web/: ai.html  dashboard.html  maintenance.html  playlists.html  rules.html  settings.html  subscriptions.html  test.html
tube-manager/web/static/: ux-enhancements.css  ux-enhancements.js
tube_manager/: __init__.py  api.py  cli.py  config.py  google.py  handlers.py  schema.py  service.py  task.py  task_factory.py  youtube_action_stubs_TODO.py
web/: ai.html  dashboard.html  index.html  maintenance.html  playlists.html  rules.html  settings.html  subscriptions.html
